# lpel

./: .gitignore  .hgignore  AUTHORS  LICENSE  LOGFORMAT  Makefile  Makefile-lib  Makefile-so  Makefile.am  Makefile.in  Makefile.jmpbuf  Makefile.nopcl  Makefile.snet  Makefile_scc.am  README  README.dev  TODO  aclocal.m4  atomic.h  atomicop.h  bqueue.c  bqueue.h  buffer.c  buffer.h  check_export.sh  configure  configure.ac  cpuassign.c  cpuassign.h  ctx_amd64-mem.S  ctx_amd64-stk.S  ctx_amd64.S  ctx_i386.S  debug.h  flagtree.c  flagtree.h  initqueue.c  initqueue.h  inport.c  inport.h  (+47 more)
arch/: atomic-builtin.h  atomic-pthread.h  mctx-amd64-mem.h  mctx-amd64.h  mctx-pcl.h  mctx-setjmp.h  mctx-ucontext.h  mctx-x86.h  mctx.h  timing.h
archive/coroutine_test/: Makefile  test.c  test2.c  test3.c
archive/locking/: Makefile  stream.c
archive/oldsrc/: linklst.c  mpscqueue.c  mpsctq.h  set.c  streamtable.h
archive/oldsrc/tests/: check_linklst.c  check_lpel.c  check_mpsctq.c  check_rwlock.c  check_streamtable.c
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
coroutine_test/: test.c  test4.c
doc/: ctx_switching.txt
include/: Makefile.am  decen_lpel.h  hrc_lpel.h  lpel.h  lpel_common.h  monitor.h
include/lpel/: monitor.h
locking/: scheduler.c  streams.h  streamset.c
modimpl/: monitoring.c  monitoring.h
src/: buffer.c  lpel_hwloc.c  lpel_hwloc.h  lpel_main.c  lpel_main.h  lpelcfg.c  lpelcfg.h  mailbox.c  malloc.c  mutex.c  placementscheduler.c  placementscheduler.h  scheduler.c  scheduler.h  sema.c  spmdext.c  stream.c  stream.h  streamset.c  streamset.h  task.c  task.h  taskiterator.c  taskiterator.h  taskqueue.h  timing.c  timing.h  worker.c  worker.h  workerctx.h  workermsg.h  worlds.c  worlds.h
src/arch/: atomic-builtin.h  atomic-x86.h  mctx-amd64-mem.h  mctx-pcl.h  mctx-setjmp.h  mctx-ucontext.h  mctx-x86.h
src/buffer/: bounded.c  unbounded_ll.c
src/include/: buffer.h  lpel_main.h  lpelcfg.h  mutex.h  stream.h  task.h  taskqueue.h  worker.h  workermsg.h
src/include/arch/: atomic-builtin.h  atomic-pthread.h  atomic-stdc.h  atomic.h  mctx-amd64-mem.h  mctx-setjmp.h  mctx-x86.h
src/sched/common/: stream.c  task.c
src/sched/decentralised/: decen_buffer.c  decen_buffer.h  decen_scheduler.c  decen_scheduler.h  decen_stream.c  decen_stream.h  decen_task.c  decen_task.h  decen_taskqueue.c  decen_taskqueue.h  decen_worker.c  decen_worker.h  sema.c  spmdext.c  spmdext.h  task_migration.c  task_migration.h
src/sched/hierarchy/: hrc_buffer.c  hrc_buffer.h  hrc_stream.c  hrc_stream.h  hrc_task.c  hrc_task.h  hrc_taskqueue.c  hrc_taskqueue.h  hrc_worker.c  hrc_worker.h  hrc_worker_init.c  hrc_worker_op.c  static_taskqueue.c  taskpriority.c  taskpriority.h
src/sched/hierarchy/.deps/: liblpel_hrc_la-hrc_task.Plo  liblpel_hrc_la-hrc_taskqueue.Plo  liblpel_hrc_la-hrc_worker.Plo
src/sched/hierarchy/scc/: scc_mailbox.c  scc_worker_init.c
tests/: Makefile  Makefile.am  Makefile.in  case_error.txt  case_error2.txt  check_cpuassign.c  check_flagtree.c  check_hashtab.c  check_linklst.c  check_lpel.c  check_lpel2.c  check_mpsctq.c  check_rwlock.c  check_set.c  check_streamset.c  check_streamtab.c  check_streamtable.c  check_timing.c  dict.txt
tests/atomic/: Makefile  bench.c
tests/check_decen/: Makefile.am  check_lpel.c  check_lpel2.c
tests/check_hrc/: Makefile.am  check_hrc.c  check_hrc2.c
tests/comp_pthreads/: Makefile  Makefile.am  Makefile.in  bench_pipe.sh  bench_ring.sh  error.c  pipetest.c  pipetest.p  plot_pipe.sh  plot_ring.sh  pthr_pipetest.c  pthr_ringtest.c  pthr_streams.c  pthr_streams.h  ringtest.c  ringtest.p  space.py
tests/exec_stack/: Makefile  stack.c
